# LLVM_sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  comandos.txt  comandos_ejecucion.txt  sandbox_executable
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
ORC/: CMakeLists.txt  HelloORC.cpp  Readme.md
input/cpp/: hello.cpp
kaleidoscope/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  README.md  Reader.cpp  Reader.hpp  Token.hpp  kaleidoscope.txt  kaleidoscope_example.txt  kaleidoscope_examples.txt  main.cpp  test_kaleidoscope.txt
kaleidoscope/codegen/: CMakeLists.txt  Codegen.cpp  Codegen.hpp  KaleidoscopeJIT.hpp
kaleidoscope/examples/: clean.txt  error.txt  test_kaleidoscope.txt
kaleidoscope/executor/: CMakeLists.txt  Executor.cpp  Executor.hpp
kaleidoscope/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Reader.cpp  Reader.hpp  Token.cpp  Token.hpp
kaleidoscope/parser/: AST.cpp  AST.hpp  CMakeLists.txt  Parser.cpp  Parser.hpp  Precedence.cpp  Precedence.hpp
kaleidoscope/reader/: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.hpp  FileReader.cpp  FileReader.hpp  Reader.cpp  Reader.hpp  ReaderFactory.cpp  ReaderFactory.hpp
pass-examples/: CMakeLists.txt  README.md
pass-examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp
sandbox/: CMakeLists.txt  hello_llvm.cpp  main.cpp
sandbox/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Reader.cpp  Reader.h  Token.h
